--- a/analysis/DeepVariant_variant_similarity.html
+++ b/analysis/DeepVariant_variant_similarity.html
@@ -2778,8 +2778,7 @@ div.tocify {
 
 <p>To assess the similarities in mutational profiles across the cell lines, we can calculate the pairwise Jaccard similarity for all cell lines. First, we used the DeepVariant to call the variants, and then applied filters to further refine the list of variants (see filter_vcfs.sh).</p>
 <p>Then, the concordance/Jaccard similarity was calculated using <code>bedtools jaccard</code> (see assess_concordance.sh). In this script, we retrieve the previously calculated jaccard metrics from Synapse, combine them into one file, and reformat so that we can plot a heatmap where 1 = identical variants and 0 = no overlapping variants.</p>
-<p>Notably, cell line 28NF had no variants that passed our filters. The QC data for the sequencing runs did not indicate any major issues with the data, so this suggests that no exome variants were detected. However, this is pretty unlikely, so it’s possible that the data are indeed problematic. We should revisit this analysis with the whole genome sequencing variants to see if we observe a similar phenomenon.</p>
-<p>Other than the weird results with 28NF, the remainder of the results are encouraging. All of the immortalized cell lines cluster with their non-immortalized counterparts, and the cell lines from the same patient (e.g. 97.2, 98.4) cluster together. This indicates that the immortalized cells maintain some level of genetic fidelity despite the genetic changes required to engineer these cell lines.</p>
+<p>All of the immortalized cell lines cluster with their non-immortalized counterparts, and the cell lines from the same patient (e.g. 97.2, 98.4) cluster together. This indicates that the immortalized cells maintain some level of genetic fidelity despite the genetic changes required to engineer these cell lines.</p>
 <pre class="r"><code>library(synapser)
 library(tidyverse)
 library(viridis)
@@ -2810,12 +2809,12 @@ table_of_immortalized_cells &lt;- jac %&gt;% rowwise %&gt;% filter(grepl(glue::g
   set_names(&quot;Primary cell line&quot;, &quot;Immortalized cell line&quot;, &quot;Jaccard index&quot;)
 
 gt::gt(table_of_immortalized_cells)</code></pre>
-<div id="hfbyevcpdt" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="acjqoapwty" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#hfbyevcpdt .gt_table {
+#acjqoapwty .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -2840,7 +2839,7 @@ gt::gt(table_of_immortalized_cells)</code></pre>
   border-left-color: #D3D3D3;
 }
 
-#hfbyevcpdt .gt_heading {
+#acjqoapwty .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -2852,7 +2851,7 @@ gt::gt(table_of_immortalized_cells)</code></pre>
   border-right-color: #D3D3D3;
 }
 
-#hfbyevcpdt .gt_title {
+#acjqoapwty .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -2864,7 +2863,7 @@ gt::gt(table_of_immortalized_cells)</code></pre>
   border-bottom-width: 0;
 }
 
-#hfbyevcpdt .gt_subtitle {
+#acjqoapwty .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -2876,13 +2875,13 @@ gt::gt(table_of_immortalized_cells)</code></pre>
   border-top-width: 0;
 }
 
-#hfbyevcpdt .gt_bottom_border {
+#acjqoapwty .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#hfbyevcpdt .gt_col_headings {
+#acjqoapwty .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -2897,7 +2896,7 @@ gt::gt(table_of_immortalized_cells)</code></pre>
   border-right-color: #D3D3D3;
 }
 
-#hfbyevcpdt .gt_col_heading {
+#acjqoapwty .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2917,7 +2916,7 @@ gt::gt(table_of_immortalized_cells)</code></pre>
   overflow-x: hidden;
 }
 
-#hfbyevcpdt .gt_column_spanner_outer {
+#acjqoapwty .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2929,15 +2928,15 @@ gt::gt(table_of_immortalized_cells)</code></pre>
   padding-right: 4px;
 }
 
-#hfbyevcpdt .gt_column_spanner_outer:first-child {
+#acjqoapwty .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#hfbyevcpdt .gt_column_spanner_outer:last-child {
+#acjqoapwty .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#hfbyevcpdt .gt_column_spanner {
+#acjqoapwty .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -2949,7 +2948,7 @@ gt::gt(table_of_immortalized_cells)</code></pre>
   width: 100%;
 }
 
-#hfbyevcpdt .gt_group_heading {
+#acjqoapwty .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2974,7 +2973,7 @@ gt::gt(table_of_immortalized_cells)</code></pre>
   vertical-align: middle;
 }
 
-#hfbyevcpdt .gt_empty_group_heading {
+#acjqoapwty .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -2989,15 +2988,15 @@ gt::gt(table_of_immortalized_cells)</code></pre>
   vertical-align: middle;
 }
 
-#hfbyevcpdt .gt_from_md > :first-child {
+#acjqoapwty .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#hfbyevcpdt .gt_from_md > :last-child {
+#acjqoapwty .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#hfbyevcpdt .gt_row {
+#acjqoapwty .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -3016,7 +3015,7 @@ gt::gt(table_of_immortalized_cells)</code></pre>
   overflow-x: hidden;
 }
 
-#hfbyevcpdt .gt_stub {
+#acjqoapwty .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -3029,7 +3028,7 @@ gt::gt(table_of_immortalized_cells)</code></pre>
   padding-right: 5px;
 }
 
-#hfbyevcpdt .gt_stub_row_group {
+#acjqoapwty .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -3043,11 +3042,11 @@ gt::gt(table_of_immortalized_cells)</code></pre>
   vertical-align: top;
 }
 
-#hfbyevcpdt .gt_row_group_first td {
+#acjqoapwty .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#hfbyevcpdt .gt_summary_row {
+#acjqoapwty .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -3057,16 +3056,16 @@ gt::gt(table_of_immortalized_cells)</code></pre>
   padding-right: 5px;
 }
 
-#hfbyevcpdt .gt_first_summary_row {
+#acjqoapwty .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#hfbyevcpdt .gt_first_summary_row.thick {
+#acjqoapwty .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#hfbyevcpdt .gt_last_summary_row {
+#acjqoapwty .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -3076,7 +3075,7 @@ gt::gt(table_of_immortalized_cells)</code></pre>
   border-bottom-color: #D3D3D3;
 }
 
-#hfbyevcpdt .gt_grand_summary_row {
+#acjqoapwty .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -3086,7 +3085,7 @@ gt::gt(table_of_immortalized_cells)</code></pre>
   padding-right: 5px;
 }
 
-#hfbyevcpdt .gt_first_grand_summary_row {
+#acjqoapwty .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -3096,11 +3095,11 @@ gt::gt(table_of_immortalized_cells)</code></pre>
   border-top-color: #D3D3D3;
 }
 
-#hfbyevcpdt .gt_striped {
+#acjqoapwty .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#hfbyevcpdt .gt_table_body {
+#acjqoapwty .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -3109,7 +3108,7 @@ gt::gt(table_of_immortalized_cells)</code></pre>
   border-bottom-color: #D3D3D3;
 }
 
-#hfbyevcpdt .gt_footnotes {
+#acjqoapwty .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -3123,7 +3122,7 @@ gt::gt(table_of_immortalized_cells)</code></pre>
   border-right-color: #D3D3D3;
 }
 
-#hfbyevcpdt .gt_footnote {
+#acjqoapwty .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-left: 4px;
@@ -3132,7 +3131,7 @@ gt::gt(table_of_immortalized_cells)</code></pre>
   padding-right: 5px;
 }
 
-#hfbyevcpdt .gt_sourcenotes {
+#acjqoapwty .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -3146,7 +3145,7 @@ gt::gt(table_of_immortalized_cells)</code></pre>
   border-right-color: #D3D3D3;
 }
 
-#hfbyevcpdt .gt_sourcenote {
+#acjqoapwty .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -3154,64 +3153,64 @@ gt::gt(table_of_immortalized_cells)</code></pre>
   padding-right: 5px;
 }
 
-#hfbyevcpdt .gt_left {
+#acjqoapwty .gt_left {
   text-align: left;
 }
 
-#hfbyevcpdt .gt_center {
+#acjqoapwty .gt_center {
   text-align: center;
 }
 
-#hfbyevcpdt .gt_right {
+#acjqoapwty .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#hfbyevcpdt .gt_font_normal {
+#acjqoapwty .gt_font_normal {
   font-weight: normal;
 }
 
-#hfbyevcpdt .gt_font_bold {
+#acjqoapwty .gt_font_bold {
   font-weight: bold;
 }
 
-#hfbyevcpdt .gt_font_italic {
+#acjqoapwty .gt_font_italic {
   font-style: italic;
 }
 
-#hfbyevcpdt .gt_super {
+#acjqoapwty .gt_super {
   font-size: 65%;
 }
 
-#hfbyevcpdt .gt_footnote_marks {
+#acjqoapwty .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 75%;
   vertical-align: 0.4em;
 }
 
-#hfbyevcpdt .gt_asterisk {
+#acjqoapwty .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#hfbyevcpdt .gt_indent_1 {
+#acjqoapwty .gt_indent_1 {
   text-indent: 5px;
 }
 
-#hfbyevcpdt .gt_indent_2 {
+#acjqoapwty .gt_indent_2 {
   text-indent: 10px;
 }
 
-#hfbyevcpdt .gt_indent_3 {
+#acjqoapwty .gt_indent_3 {
   text-indent: 15px;
 }
 
-#hfbyevcpdt .gt_indent_4 {
+#acjqoapwty .gt_indent_4 {
   text-indent: 20px;
 }
 
-#hfbyevcpdt .gt_indent_5 {
+#acjqoapwty .gt_indent_5 {
   text-indent: 25px;
 }
 </style>
